# squad-station-2

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  package.json  squad.yml
.claude/: gsd-file-manifest.json  settings.json
.claude/commands/: orchestrator-template.md  orchestrator.md  squad-orchestrator.md
.gemini/: gsd-file-manifest.json  settings.json
.gemini/commands/: squad-orchestrator.toml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.9-MILESTONE-AUDIT.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: BUGS.md  GAP-ANALYSIS.md  INDEX.md  PLAYBOOK.md  SOLUTION-DESIGN.md  SYSTEM-DESIGN.md  TECH-STACK.md  install-tui-flow.md
examples/orchestrator-gemini/: squad.yml
examples/orchestrator-haiku/: squad.yml
hooks/: claude-code.sh  gemini-cli.sh
npm-package/: CHANGELOG.md  README.md  package.json
scripts/: bump-version.sh  postinstall.js
spike/: Cargo.toml  build.rs
spike/src/: main.rs
src/: cli.rs  config.rs  main.rs  providers.rs  tmux.rs
src/commands/: agents.rs  browser.rs  clean.rs  clone.rs  close.rs  context.rs  diagram.rs  fleet.rs  ui.rs  (+20 more)
tests/: e2e_cli.sh  e2e_workflow.sh  test_cli.rs  test_clone.rs  test_close_reset_clean.rs  test_commands.rs  test_config.rs  test_db.rs  test_integration.rs  test_lifecycle.rs  test_templates.rs  test_views.rs  test_watchdog.rs
web/: package-lock.json  package.json
(+176 files in other folders)
