[workspace]
members = ["spike"]
resolver = "2"

[package]
name = "squad-station"
version = "2.0.2"
edition = "2021"
description = "Message routing and orchestration for AI agent squads"
build = "build.rs"

[features]
browser = ["dep:axum", "dep:rust-embed", "dep:axum-embed", "dep:tower-http", "dep:open"]

[dependencies]
axum = { version = "0.7", features = ["ws"], optional = true }
rust-embed = { version = "8", features = ["axum-ex", "debug-embed"], optional = true }
axum-embed = { version = "0.1", optional = true }
tower-http = { version = "0.5", features = ["trace", "timeout"], optional = true }
open = { version = "5", optional = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.17"
owo-colors = { version = "3", features = ["supports-colors"] }
libc = "0.2"
ratatui = "0.30"
crossterm = "0.29"
tui-big-text = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
