[package]
name = "spike"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
rust-embed = { version = "8", features = ["axum-ex", "debug-embed"] }
axum-embed = "0.1"
tower-http = { version = "0.5", features = ["trace", "timeout"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
